--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -21,3 +21,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+/* ---------------util-start---------------- */
+.full {
+  width: 100%;
+  height: 100%;
+}
+.both-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* ---------------util-end---------------- */
