--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -5,8 +5,9 @@
 
   .header {
     height: 40px;
-    line-height: 40px;
-    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .content {
