--- a/src/pages/Home/components/CardView.module.less
+++ b/src/pages/Home/components/CardView.module.less
@@ -1,3 +1,9 @@
+.contentContainer {
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
 .card {
   :global(.ant-card-body) {
     padding: 0;
