--- a/src/components/VideoPlayer/index.module.less
+++ b/src/components/VideoPlayer/index.module.less
@@ -6,6 +6,11 @@
   justify-content: center;
   align-items: center;
 
+  :global(.plyr) {
+    width: 100%;
+    height: 100%;
+  }
+
   .player {
   }
 }
