--- a/src/components/VideoPlayer/index.module.less
+++ b/src/components/VideoPlayer/index.module.less
@@ -5,12 +5,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 
-  :global(.plyr) {
-    width: 100%;
-    height: 100%;
+  .back {
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    color: white;
   }
 
   .player {
+    width: 100%;
+    height: 100%;
   }
 }
