--- a/src/pages/Home/components/PlayModal.module.less
+++ b/src/pages/Home/components/PlayModal.module.less
@@ -1,14 +1,7 @@
 .fullscreen {
   position: relative;
 
-  .close {
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    cursor: pointer;
-
-    &:hover {
-      color: rgb(240, 78, 78);
-    }
+  :global(.ant-drawer-body) {
+    padding: 0;
   }
 }
